chore: add ideas.md to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 content/posts/2026-02-10-feedback-structured-insight-pipeline/blog-project-487109-7072017f227a.json
 .playwright-mcp
 **/.DS_Store
+ideas.md
