--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ content/posts/2026-02-10-feedback-structured-insight-pipeline/blog-project-48710
 .playwright-mcp
 **/.DS_Store
 ideas.md
-agents
+agents/
+research/
